# swc-plugin-coverage-instrument

./: .gitignore  .mocharc.json  .swcrc  Cargo.toml  LICENSE  README.md  a.boo  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: bump-swc-core.yml  ci_main.yml
spec/: fixture.spec.ts  plugin.spec.ts
spec/e2e/: e2e.spec.ts
spec/e2e/fixtures/: should-be-excluded.test.js  should-be-included.js
spec/fixtures/: functions.yaml  issue-233.yaml  issue-258.yaml  issue-277.yaml  tenary.yaml
spec/swc-coverage-custom-transform/: Cargo.toml
spec/swc-coverage-custom-transform/src/: lib.rs  util.rs
spec/swc-coverage-instrument-wasm/: Cargo.toml  README.md
spec/swc-coverage-instrument-wasm/src/: lib.rs
spec/util/: constants.ts  read-coverage.ts  verifier.ts
