[workspace]
exclude = ["spec/swc-coverage-custom-transform"]
members = [
  "packages/swc-plugin-coverage",
  "packages/istanbul-oxide",
  "packages/swc-coverage-instrument",
  "spec/swc-coverage-instrument-wasm",
]

[profile.release]
#lto = true

[workspace.dependencies]
getrandom          = { version = "0.2.10" }
indexmap           = { version = "1.9.3" }
once_cell          = { version = "1.18.0" }
serde              = { version = "1.0.160" }
serde-wasm-bindgen = { version = "0.5.0" }
serde_json         = { version = "1.0.96" }
swc_core           = { version = "0.79.17" }
tracing            = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
wasm-bindgen       = { version = "0.2.84" }
