[workspace]
exclude = ["spec/swc-coverage-custom-transform"]
members = [
  "packages/swc-plugin-coverage",
  "packages/istanbul-oxide",
  "packages/swc-coverage-instrument",
  "spec/swc-coverage-instrument-wasm",
]

[profile.release]
#lto = true

[workspace.dependencies]
istanbul-oxide          = { path = "./packages/istanbul-oxide" }
swc-coverage-instrument = { path = "./packages/swc-coverage-instrument" }

getrandom          = { version = "0.2.12" }
indexmap           = { version = "2.2.2" }
once_cell          = { version = "1.19.0" }
serde              = { version = "1.0.160" }
serde-wasm-bindgen = { version = "0.5.0" }
serde_json         = { version = "1.0.96" }
swc_core           = { version = "0.90.7" }
tracing            = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
wasm-bindgen       = { version = "0.2.91" }
