[workspace]
exclude = ["spec/swc-coverage-custom-transform"]
members = [
  "packages/swc-plugin-coverage",
  "packages/istanbul-oxide",
  "packages/swc-coverage-instrument",
  "spec/swc-coverage-instrument-wasm",
]
resolver = "2"

[profile.release]
#lto = true

  [workspace.dependencies]
  istanbul-oxide          = { path = "./packages/istanbul-oxide", version = "0.0.26" }
  swc-coverage-instrument = { path = "./packages/swc-coverage-instrument" }

  getrandom          = { version = "0.2.15" }
  indexmap           = { version = "2.2.6" }
  once_cell          = { version = "1.19.0" }
  serde              = { version = "1.0.203" }
  serde-wasm-bindgen = { version = "0.6.5" }
  serde_json         = { version = "1.0.120" }
  swc_core           = { version = "14.0.1" }
  tracing            = { version = "0.1.37" }
  tracing-subscriber = { version = "0.3.17" }
  wasm-bindgen       = { version = "0.2.92" }
  wax                = { version = "0.6.0" }
