[package]
edition = "2021"
name    = "swc-coverage-custom-transform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
anyhow = "1.0.66"
backtrace = "0.3.66"
napi = { version = "2.10.1", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2.9.1", default-features = false, features = [
  "type-def",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["unbounded_depth"] }
swc-coverage-instrument = { version = "0.0.13", path = "../../packages/swc-coverage-instrument" }

swc_core = { version = "0.43.2", features = [
  "common_concurrent",
  "ecma_transforms",
  "ecma_ast",
  "allocator_node",
  "ecma_visit",
  "base_node",
] }
