[package]
edition = "2021"
name    = "swc-coverage-custom-transform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
anyhow = "1.0.70"
backtrace = "0.3.67"
napi = { version = "2.12.5", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2.12.3", default-features = false, features = [
  "type-def",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["unbounded_depth"] }
swc-coverage-instrument = { version = "0.0.26", path = "../../packages/swc-coverage-instrument" }
swc_core = { version = "14.0.1", features = [
  "common_concurrent",
  "ecma_transforms",
  "ecma_ast",
  "allocator_node",
  "ecma_visit",
  "base_node",
] }
