[package]
edition = "2021"
name    = "swc-coverage-instrument-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde                   = { version = "1.0.145", features = ["derive"] }
serde-wasm-bindgen      = "0.4.3"
swc-coverage-instrument = { version = "0.0.13", path = "../../packages/swc-coverage-instrument" }
wasm-bindgen            = { version = "0.2.83", features = ["serde-serialize"] }
