[package]
edition = "2021"
name    = "swc-coverage-instrument-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen       = { workspace = true, features = ["serde-serialize"] }

swc-coverage-instrument = { version = "0.0.17", path = "../../packages/swc-coverage-instrument" }
